[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://library/common/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://library/common/HurtBox.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "dead"

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 17
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 2 )]

[node name="Area" parent="HitBox" index="0"]
collision_layer = 0

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
max_hp = 1

[node name="Area" parent="HurtBox" index="0"]
collision_layer = 2
collision_mask = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/dead = SubResource( 1 )

[node name="DropTarget" type="Timer" parent="."]
one_shot = true

[connection signal="is_dead" from="HurtBox" to="." method="_on_HurtBox_is_dead"]
[connection signal="took_damage" from="HurtBox" to="." method="_on_HurtBox_took_damage"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DropTarget" to="." method="_on_DropTarget_timeout"]

[editable path="HitBox"]
[editable path="HurtBox"]
